# raw-rust-webserver

./: .404.html.swp  .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_LIFECYCLE.md  README.md  codex.md  hello.html  spec.md
.github/workflows/: ci.yml
crates/raw/: Cargo.toml
crates/raw-cli/: Cargo.toml
crates/raw-cli/src/: main.rs  scaffold.rs
crates/raw/examples/: basic.rs
crates/raw/src/: app.rs  config.rs  error.rs  http.rs  lib.rs  middleware.rs  middleware_builtin.rs  request.rs  response.rs  router.rs  static_files.rs
crates/raw/tests/: server.rs  static_files.rs
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md
docs/assets/: cargo-test.cast
public/: 404.html  index.html
src/: .hello.html.swp  .main.rs.swp  config.rs  hello.html  http.rs  lib.rs  main.rs
