# Credit: Ben Ajaero

[package]
name = "raw"
version = "0.1.0"
edition = "2021"
description = "Raw is a Rust-native web server framework."
license = "CC-BY-NC-ND-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
